<resources>
    <string name="app_name">test</string>
    <string name="text_view">Notes</string>
    <string name="registration_interface">Registration</string>
    <string name="login_interface">Login</string>
    <string name="login_button">Login</string>
    <string name="registration_button">Registration</string>
    <string name="login_email_hint">Enter your email</string>
    <string name="login_password_hint">Enter your password</string>
    <string name="registration_name_hint">Enter your name</string>
    <string name="registration_email_hint">Enter your email</string>
    <string name="registration_password_hint">Enter your password</string>
    />
</resources>